--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1> Solo Project </h1>
   <div id="root"></div>
-  <script src="build/bundle.js"></script>
+  <script src="build.js"></script>
 </body>
 </html>
